// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks Can return aggregated data 1`] = `
Object {
  "blocks": Array [
    Object {
      "number": 29021,
      "transactions_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fee": 171158,
            "totalOutput": 2846601153795,
          },
          "count": 2,
          "max": Object {
            "fee": 171246,
            "totalOutput": 4924799478660,
          },
          "min": Object {
            "fee": 171070,
            "totalOutput": 768402828930,
          },
          "sum": Object {
            "fee": 342316,
            "totalOutput": 5693202307590,
          },
        },
      },
    },
  ],
}
`;

exports[`blocks Can return blocks by number 1`] = `
Object {
  "blocks": Array [
    Object {
      "id": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
    },
  ],
}
`;

exports[`blocks Can return filtered aggregated data 1`] = `
Object {
  "blocks": Array [
    Object {
      "number": 29021,
      "transactions_aggregate": Object {
        "aggregate": Object {
          "count": 2,
        },
      },
    },
  ],
}
`;

exports[`blocks are linked to their predecessor, and the chain can be traversed 1`] = `
Object {
  "blocks": Array [
    Object {
      "id": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
      "previousBlock": Object {
        "number": 29021,
        "previousBlock": Object {
          "number": 29020,
          "previousBlock": Object {
            "number": 29019,
          },
        },
      },
    },
  ],
}
`;

exports[`cardano Returns key information about the network 1`] = `
Object {
  "cardano": Object {
    "blockHeight": 31070,
    "currentEpoch": Object {
      "number": 1,
    },
    "protocolConst": 2160,
    "slotDuration": 20000,
    "startTime": "2017-09-23T21:44:51",
  },
}
`;

exports[`epochs Can return aggregated Epoch data 1`] = `
Object {
  "epochs_aggregate": Object {
    "aggregate": Object {
      "count": "2",
      "max": Object {
        "number": "1",
        "output": "17282903106017760",
        "transactionsCount": "5344",
      },
      "min": Object {
        "output": "10378568796482912",
        "transactionsCount": "33",
      },
      "sum": Object {
        "output": "27661471902500670",
        "transactionsCount": "5377",
      },
    },
  },
}
`;

exports[`epochs Can return aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 28103.350131787032,
            "size": 881.9561412756984,
          },
          "count": 9485,
          "max": Object {
            "fees": 684456,
            "size": 648087,
          },
          "min": Object {
            "fees": 0,
            "size": 631,
          },
          "sum": Object {
            "fees": 266560276,
            "size": 8365354,
          },
        },
      },
      "number": 1,
    },
  ],
}
`;

exports[`epochs Can return aggregated data 2`] = `
Object {
  "epochs": Array [
    Object {
      "blocks_aggregate": Object {
        "aggregate": Object {
          "count": 8108,
        },
      },
      "number": 1,
    },
  ],
}
`;

exports[`epochs Returns epoch details by number 1`] = `
Object {
  "epochs": Array [
    Object {
      "lastBlockTime": "2017-10-01T02:25:51",
      "number": 1,
      "output": "17282903106017760",
      "startedAt": "2017-09-28T21:45:51",
      "transactionsCount": "5344",
    },
  ],
}
`;

exports[`epochs Returns epoch details by number range 1`] = `
Object {
  "epochs": Array [
    Object {
      "lastBlockTime": "2017-10-01T02:25:51",
      "number": 1,
      "output": "17282903106017760",
      "startedAt": "2017-09-28T21:45:51",
      "transactionsCount": "5344",
    },
  ],
}
`;

exports[`transactions Can return aggregated data 1`] = `
Object {
  "transactions": Array [
    Object {
      "fee": "171246",
      "id": "05ad8b467095e0886713a38231ab9fe84e4031a433a9400ebf70ec9415e20102",
      "inputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": 4924799649906,
          },
          "count": 1,
          "max": Object {
            "value": 4924799649906,
          },
          "min": Object {
            "value": 4924799649906,
          },
          "sum": Object {
            "value": 4924799649906,
          },
        },
      },
      "outputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": 2462399739330,
          },
          "count": 2,
          "max": Object {
            "value": 4824799478660,
          },
          "min": Object {
            "value": 100000000000,
          },
          "sum": Object {
            "value": 4924799478660,
          },
        },
      },
    },
    Object {
      "fee": "171070",
      "id": "e680432562b3b71fe44ca4eb8e29cb181d3a0858b3e2a643a55f7513d901bcae",
      "inputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": 768403000000,
          },
          "count": 1,
          "max": Object {
            "value": 768403000000,
          },
          "min": Object {
            "value": 768403000000,
          },
          "sum": Object {
            "value": 768403000000,
          },
        },
      },
      "outputs_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "value": 384201414465,
          },
          "count": 2,
          "max": Object {
            "value": 768401828930,
          },
          "min": Object {
            "value": 1000000,
          },
          "sum": Object {
            "value": 768402828930,
          },
        },
      },
    },
  ],
}
`;

exports[`transactions Can return aggregated data 2`] = `
Object {
  "transactions": Array [
    Object {
      "id": "e680432562b3b71fe44ca4eb8e29cb181d3a0858b3e2a643a55f7513d901bcae",
      "inputs_aggregate": Object {
        "aggregate": Object {
          "count": 1,
        },
      },
      "outputs_aggregate": Object {
        "aggregate": Object {
          "count": 1,
        },
      },
    },
  ],
}
`;

exports[`transactions Returns transactions by IDs 1`] = `
Object {
  "transactions": Array [
    Object {
      "block": Object {
        "number": 29021,
      },
      "fee": "171246",
      "id": "05ad8b467095e0886713a38231ab9fe84e4031a433a9400ebf70ec9415e20102",
      "inputs": Array [
        Object {
          "address": "DdzFFzCqrht5ExAdoZVExXoZTpoMYGKxva3thvvvHapsLZQzSX3kCqwgqi5NSM2oUtHYYDqsSnvSGbqkarB6cSgDZohUhLWZ9KFdDWsa",
          "value": "4924799649906",
        },
      ],
      "outputs": Array [
        Object {
          "address": "DdzFFzCqrhsxVv8Sjuj35Zkw42T9WjwXa6DasrNknm5M3bPVDnWJWwhX5NymoZncUArTfFYZ9sYGaA9htKSNYoK5Vkzx2vUtunAFt3eE",
          "value": "4824799478660",
        },
        Object {
          "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
          "value": "100000000000",
        },
      ],
      "totalOutput": "4924799478660",
    },
    Object {
      "block": Object {
        "number": 29021,
      },
      "fee": "171070",
      "id": "e680432562b3b71fe44ca4eb8e29cb181d3a0858b3e2a643a55f7513d901bcae",
      "inputs": Array [
        Object {
          "address": "DdzFFzCqrhsggyaAMAUTjGtjBr1CTp8tTcHYWbqtoyQBZcaYHM16rjbUDawTwoVaEPawAMPLJmpJVXHBNxZnTgmQzqAcNDe6XvMe5BkB",
          "value": "768403000000",
        },
      ],
      "outputs": Array [
        Object {
          "address": "DdzFFzCqrhsuz652nVpjktdtiV44uWJLHv83m61S33gzfB4TBx7SKp3DgM18fBJznMrbUdsEFEvXW4LYqVKFE9fjMgVhmJP2LBhUvEe8",
          "value": "768401828930",
        },
        Object {
          "address": "DdzFFzCqrhsgrGt7zHydkE4cKxjB7SgsdnMPUFxYEwBu1u4sGobxZL5Xo3eDycCrtSYAUyw9aAsZZxFpTdgur6MwYDYMwAZ4xNGKRD3o",
          "value": "1000000",
        },
      ],
      "totalOutput": "768402828930",
    },
  ],
}
`;

exports[`utxoSet Can be scoped by address 1`] = `
Object {
  "utxoSet": Array [
    Object {
      "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
      "value": "100000000000",
    },
    Object {
      "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
      "value": "150000000000",
    },
  ],
}
`;

exports[`utxoSet Can be scoped by list of addresses 1`] = `
Object {
  "utxoSet": Array [
    Object {
      "address": "Ae2tdPwUPEZGvXJ3ebp4LDgBhbxekAH2oKZgfahKq896fehv8oCJxmGJgLt",
      "value": "1153846000000",
    },
    Object {
      "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
      "value": "100000000000",
    },
    Object {
      "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
      "value": "150000000000",
    },
  ],
}
`;
